--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Offer Resources</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- css link  -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <header>
-
+    <header class="merriweather-bold margin-fixed">
+        <div class="container">
+            <img class="new-year-image" src="images/Banner Image.png" alt="Snow" style="width:100%;">
+            <div class="centered">
+                <h3 class="new-year-taitle">Happy New Year</h3>
+                <h1 class="party-selibration">New Year Party Celebration</h1>
+            </div>
+        </div>
+        <div class="categories">
+            <h1 class="categories-title">65% OFF</h1>
+            <p class="categories-sub-title">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="all-taitle">ALL CATEGORIES</h2>
+            <img src="images/New Year Photo.png" alt="" srcset="">
+        </div>
     </header>
 
     <main>
