welcome sectoin added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,26 @@
     </header>
 
     <main>
-        <section>
-
+        <!-- welcome section start -->
+        <section class="merriweather-bold margin-fixed">
+            <div class="welcome">
+                <img class="new-year-image" src="images/Vectorrr.png" alt="Snow" style="width:100%;">
+                <div class="display-flex">
+                    <div class="welcome-conteinar">
+                        <h1 class="welcome-title">Welcome to <br>midnight party</h1>
+                        <p class="welcome-drescription">Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                            sed
+                            molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                        <button class="btn-primary">JOIN NOW</button>
+                    </div>
+                    <div class="year-img">
+                        <img src="images/Group 70.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- welcome-section end -->
+         
     </main>
     <footer>
 
