--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
             </div>
         </section>
         <!-- welcome-section end -->
+
+        <!-- place section start  -->
+        <section class="merriweather-bold margin-fixed place-section">
+            <div class="place">
+                <h2><span class="place-adres">Place:</span> New Park Hotel</h2>
+                <h2><span class="place-adres">Date:</span> 31 December Night 2023</h2>
+                <h2><span class="place-adres">Time:</span> Evening 7.30 pm to 12.30 am</h2>
+                <button class="btn-primary place-btn">JOIN NOW</button>
+            </div>
+        </section>
+        <!-- place section added -->
          
     </main>
     <footer>
