comming soon sectoin added

--- a/index.html
+++ b/index.html
@@ -62,8 +62,28 @@
                 <button class="btn-primary place-btn">JOIN NOW</button>
             </div>
         </section>
-        <!-- place section added -->
-         
+        <!-- place section end -->
+
+        <!-- coming section start -->
+        <section class="merriweather-bold margin-fixed">
+            <div class="coming-container">
+                <div class="coming-title">
+                    <h4 class="best">NEW BEST OFFER</h4>
+                    <h1 class="title">Coming Soon</h1>
+                    <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="coming-img">
+                    <img src="images/Ellipse 1.png" alt="">
+                </div>
+                <div class="coming-end">
+                    <h2 class="letest-year">2024</h2>
+                    <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="images/Group 96.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- coming section end -->
     </main>
     <footer>
 
