holidays section added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <div class="coming-title">
                     <h4 class="best">NEW BEST OFFER</h4>
                     <h1 class="title">Coming Soon</h1>
-                    <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed
                         sodales risus ut pellentesque vel euismod. </p>
                 </div>
                 <div class="coming-img">
@@ -84,6 +85,26 @@
             </div>
         </section>
         <!-- coming section end -->
+
+        <!-- Holidays section start  -->
+        <section class="merriweather-bold margin-fixed">
+            <h4 class="functional-text text-center">WHAT IS FUNCTIONAL</h4>
+            <h1 class="sale-title text-center"><span class="holidays-color">Holidays</span> Sale 50%</h1>
+            <p class="sub-title text-center sale-drescription">Dolor sit amet consectetur. Consequat eget consectetur
+                maecenas sed
+                molestie<br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam
+                id<br>
+                fermentum amet amet sit consectetur.</p>
+            <div class="holidays-bg">
+                <div class="reword">
+                    <img width="650" src="images/Group 75.png" alt="">
+                </div>
+                <div class="discount">
+                    <img width="250" src="images/Group 44.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- sale section end -->
     </main>
     <footer>
 
