our awesome portfolio section added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
             </div>
         </section>
         <!-- sale section end -->
+
+        <!-- Our Awesome Portfolio section start -->
+        <section class="merriweather-bold margin-fixed">
+            <h4 class="best">THE BEST GIFTS</h4>
+            <h1 class="title">Our Awesome Portfolio</h1>
+            <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
+                <br>
+                Ipsum sed sodales risus ut pellentesque vel euismod.
+            </p>
+            <div class="awesome-portfolio">
+
+                <img src="images/Rectangle 3.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/Rectangle 7.png" alt="">
+                <img src="images/Rectangle 8.png" alt="">
+            </div>
+        </section>
+        <!-- Our Awesome Portfolio section start -->
     </main>
     <footer>
 
