--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
     <!-- css link  -->
     <link rel="stylesheet" href="styles/style.css">
+    <!-- font Awesome -->
+    <script src="https://kit.fontawesome.com/78d84ebd26.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -125,9 +127,53 @@
             </div>
         </section>
         <!-- Our Awesome Portfolio section start -->
+
+        <!-- subscribe section start -->
+        <section class="merriweather-bold margin-fixed text-center place-section">
+            <img src="images/Group 61.png" alt="">
+            <h1 class="title">Subscribe Newsletter</h1>
+            <p class="sub-title">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
+                <br>
+                Ipsum sed sodales risus ut pellentesque vel euismod.
+            </p>
+            <input type="email" name="" id="user-email" placeholder="user@gmail.com"><button
+                id="user-btn">Subscribe</button>
+        </section>
     </main>
     <footer>
-
+        <div class="merriweather-bold">
+            <div class="footer-title">
+                <div>
+                    <h4>44, Big Building Roosevelt Street</h4>
+                    <br>
+                    <h4>Beach Gardens Florida 33410</h4>
+                </div>
+                <div>
+                    <h4><i class="fa fa-phone"></i> +00 123 584 124</h4>
+                    <br>
+                    <h4> <i class="fa fa-globe"></i> www.website.com</h4>
+                </div>
+            </div>
+            <hr>
+            <div class="text-center social-icons">
+                <a href="https://www.facebook.com/darknight.imran" target="_blank"><img width="50"
+                        src=" icons/Facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/darknight.imran/" target="_blank"><img width="50"
+                        src="icons/Instagram.png" alt=""></a>
+                <a href="https://x.com/imran7361415309" target="_blank"><img width="50" src="icons/Twitter.png"
+                        alt=""></a>
+                <a href="" target="_blank"><img width="50" src="icons/Linkedin.png" alt=""></a>
+            </div>
+            <hr>
+            <div class="footer-title">
+                <div>
+                    <h4>2017, All Rights Reserved.</h4>
+                </div>
+                <div>
+                    <h4>Unsubscribe</h4>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
